--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/masked-view": "^0.1.6",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-fast-image": "^7.0.2",
-    "react-native-gesture-handler": "1.4.1",
+    "react-native-gesture-handler": "^1.5.6",
     "react-native-iphone-x-helper": "1.2.1",
     "react-native-platform-touchable": "1.1.1",
-    "react-native-reanimated": "1.0.0-alpha.12",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.2",
+    "react-native-screens": "^2.0.0-beta.2",
     "react-native-snap-carousel": "3.7.5",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
     "react-native-video-controls": "^2.4.0",
-    "react-navigation": "3.9.2",
+    "react-navigation": "4.1.1",
     "react-navigation-redux-helpers": "3.0.8",
+    "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
