--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.1",
+    "@react-navigation/stack": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -26,9 +28,6 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
     "react-native-video-controls": "^2.4.0",
-    "react-navigation": "4.1.1",
-    "react-navigation-redux-helpers": "3.0.8",
-    "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
