--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-video-controls": "^2.4.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.0-rc.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
